exports[`test 1:1 media with landscape image, anchor origin: end 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />
      }
      dispatcher={[Function]}
      origin="end"
      ratio="square" />
    <CardActions
      content={
        Array [
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test 1:1 media with landscape image, anchor origin: start 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />
      }
      dispatcher={[Function]}
      origin="start"
      ratio="square" />
    <CardActions
      content={
        Array [
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test 1:1 media with square image, anchor origin: default 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />
      }
      dispatcher={[Function]}
      ratio="square" />
    <CardActions
      content={
        Array [
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test 16:9 media with landscape image, anchor origin: default 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />
      }
      dispatcher={[Function]} />
    <CardActions
      content={
        Array [
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test 16:9 media with landscape image, anchor origin: end 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />
      }
      dispatcher={[Function]}
      origin="end" />
    <CardActions
      content={
        Array [
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test 16:9 media with landscape image, anchor origin: start 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />
      }
      dispatcher={[Function]}
      origin="start" />
    <CardActions
      content={
        Array [
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test 16:9 media with portrait image, anchor origin: default 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/2.jpg" />
      }
      dispatcher={[Function]} />
    <CardActions
      content={
        Array [
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test 16:9 media with portrait image, anchor origin: end 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/2.jpg" />
      }
      dispatcher={[Function]}
      origin="end" />
    <CardActions
      content={
        Array [
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test 16:9 media with portrait image, anchor origin: start 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/2.jpg" />
      }
      dispatcher={[Function]}
      origin="start" />
    <CardActions
      content={
        Array [
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test 16:9 media with square image, anchor origin: default 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/circle.png" />
      }
      dispatcher={[Function]} />
    <CardActions
      content={
        Array [
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test 16:9 media with square image, anchor origin: end 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/circle.png" />
      }
      dispatcher={[Function]}
      origin="end" />
    <CardActions
      content={
        Array [
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test 16:9 media with square image, anchor origin: start 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/circle.png" />
      }
      dispatcher={[Function]}
      origin="start" />
    <CardActions
      content={
        Array [
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Any content (list) 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <List
      hoverable={true}
      tiles={
        Array [
          <ListTile
            subtitle="Secondary text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
            title="Title line Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco" />,
          <ListTile
            subtitle="Secondary text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
            title="Title line Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco" />,
          <ListTile
            subtitle="Secondary text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
            title="Title line Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco" />,
        ]
      } />
  </div>
</div>
`;

exports[`test Any content (tabs) 1`] = `
<Card
  content={<n />} />
`;

exports[`test Bottom action row, bordered 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <ListTile
      className="pe-card__header "
      dispatcher={[Function]}
      front={
        <Icon
          avatar={true}
          size="large"
          src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png" />
      }
      icon={
        Object {
          "avatar": true,
          "size": "large",
          "src": "http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png",
        }
      }
      subtitle="Subhead"
      title="Title" />
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/grey.jpg" />
      }
      dispatcher={[Function]} />
    <div
      className="pe-card__text  ">
      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.
    </div>
    <CardActions
      bordered={true}
      content={
        Array [
          <Button
            label="Action 1" />,
          <Button
            label="Action 2" />,
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "size": "medium",
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z\"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Bottom action row, vertical 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <ListTile
      className="pe-card__header "
      dispatcher={[Function]}
      front={
        <Icon
          avatar={true}
          size="large"
          src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png" />
      }
      icon={
        Object {
          "avatar": true,
          "size": "large",
          "src": "http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png",
        }
      }
      subtitle="Subhead"
      title="Title" />
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/grey.jpg" />
      }
      dispatcher={[Function]} />
    <div
      className="pe-card__text  ">
      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.
    </div>
    <CardActions
      bordered={true}
      content={
        <List
          borders={true}>
          <ListTile
            hoverable={true}>
            Action 1
          </ListTile>
          <ListTile
            hoverable={true}>
            Action 2
          </ListTile>
          <ListTile
            hoverable={true}>
            Action 3
          </ListTile>
        </List>
      }
      dispatcher={[Function]}
      layout="vertical"
      tight={true} />
  </div>
</div>
`;

exports[`test Card URL 1`] = `
<a
  className="pe-card   "
  href="http://en.wikipedia.org/wiki/Road_to_Nowhere">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <ListTile
      className="pe-card__header "
      dispatcher={[Function]}
      front={
        <Icon
          className="pe-icon--avatar"
          size="large"
          src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png" />
      }
      icon={
        Object {
          "className": "pe-icon--avatar",
          "size": "large",
          "src": "http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png",
        }
      }
      subtitle="Subhead"
      title="Title" />
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />
      }
      dispatcher={[Function]} />
    <CardPrimary
      dispatcher={[Function]}
      subtitle="Subtitle"
      title="Primary title" />
  </div>
</a>
`;

exports[`test Card events 1`] = `
<div
  className="pe-card   "
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <ListTile
      className="pe-card__header "
      dispatcher={[Function]}
      front={
        <Icon
          avatar={true}
          size="large"
          src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png" />
      }
      icon={
        Object {
          "avatar": true,
          "size": "large",
          "src": "http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png",
        }
      }
      subtitle="Subhead"
      title="Title" />
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />
      }
      dispatcher={[Function]} />
    <CardPrimary
      dispatcher={[Function]}
      subtitle="Subtitle"
      title="Primary title" />
    <CardActions
      content={
        Array [
          <Button
            events={
                Object {
                    "onClick": [Function],
                  }
            }
            label="Action 1" />,
          <Button
            events={
                Object {
                    "onClick": [Function],
                  }
            }
            label="Action 2" />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Custom Card blue 1`] = `
<div
  className="pe-card   pe-dark-tone"
  style={
    Object {
      "backgroundColor": "#227586",
      "maxWidth": "360px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      dispatcher={[Function]}
      media={
        Object {
          "content": <img
            src="http://upload.wikimedia.org/wikipedia/en/f/f9/Foster_the_People_-_Supermodel.jpg" />,
          "ratio": "square",
          "size": "medium",
        }
      }
      subtitle="Foster the People"
      title="Supermodel" />
    <CardActions
      content={
        Array [
          <Button
            label="Listen now" />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Custom Card purple 1`] = `
<div
  className="pe-card   pe-dark-tone"
  style={
    Object {
      "backgroundColor": "#871E6A",
      "maxWidth": "360px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      dispatcher={[Function]}
      title="Bucket List" />
    <div
      className="pe-card__text  ">
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<ul><li>Skydiving</li><li>Alaska</li><li>Kite surfing</li></ul>",
          }
        } />
    </div>
    <CardActions
      content={
        <Button
          label="Edit" />
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Custom Card sand 1`] = `
<div
  className="pe-card   pe-dark-tone"
  style={
    Object {
      "backgroundColor": "#B89E58",
      "maxWidth": "360px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      dispatcher={[Function]}
      media={
        Object {
          "content": <img
            src="https://lastfm-img2.akamaized.net/i/u/avatar170s/ca297951611442bda8ea55fba764c757" />,
          "ratio": "square",
          "size": "medium",
        }
      }
      subtitle="2 Unlimited"
      title="Get Ready" />
    <CardActions
      content={
        Array [
          <Button
            label="Listen now" />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Custom Card white 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "360px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      content={
        Array [
          Object {
            "title": <div
              className="pe-card__title">
              <div
                    className="pe-card__subtitle">
                    Travel
              </div>
              <span>
                    Road Trip
              </span>
        </div>,
          },
          Object {
            "media": Object {
              "content": <img
                src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />,
              "ratio": "square",
              "size": "small",
            },
          },
        ]
      }
      dispatcher={[Function]} />
    <div
      className="pe-card__text  ">
      A road trip is a long distance journey on the road. Typically, road trips are long distances traveled by automobile.
    </div>
    <CardActions
      content={
        Array [
          <Button
            label="Action 1" />,
          <Button
            label="Action 2" />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Dark tone class + light theme class 1`] = `
<div
  className="pe-light-tone"
  style={
    Object {
      "background": "#fff",
    }
  }>
  <Card
    content={
      Array [
        Object {
          "header": Object {
            "icon": Object {
              "avatar": true,
              "size": "large",
              "src": "http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png",
            },
            "subtitle": "Subhead",
            "title": "Title",
          },
        },
        Object {
          "media": Object {
            "content": <img
              src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />,
          },
        },
        Object {
          "primary": Object {
            "subtitle": "Subtitle quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
            "title": "Primary title quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
          },
        },
        Object {
          "text": Object {
            "content": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.",
          },
        },
        Object {
          "actions": Object {
            "bordered": true,
            "content": Array [
              <Button
                label="Action 1" />,
              <Button
                label="Action 2" />,
              <div
                className="flex" />,
              <IconButton
                icon={
                          Object {
                                    "size": "medium",
                                    "svg": Object {
                                      "content": <div
                                        dangerouslySetInnerHTML={
                                                      Object {
                                                                    "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z\"/></svg>",
                                                                  }
                                        } />,
                                    },
                                  }
                } />,
            ],
          },
        },
      ]
    } />
</div>
`;

exports[`test Dark tone class + light tone 1`] = `
<div
  style={
    Object {
      "background": "#fff",
    }
  }>
  <Card
    content={
      Array [
        Object {
          "header": Object {
            "icon": Object {
              "avatar": true,
              "size": "large",
              "src": "http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png",
            },
            "subtitle": "Subhead",
            "title": "Title",
          },
        },
        Object {
          "media": Object {
            "content": <img
              src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />,
          },
        },
        Object {
          "primary": Object {
            "subtitle": "Subtitle quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
            "title": "Primary title quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
          },
        },
        Object {
          "text": Object {
            "content": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.",
          },
        },
        Object {
          "actions": Object {
            "bordered": true,
            "content": Array [
              <Button
                label="Action 1" />,
              <Button
                label="Action 2" />,
              <div
                className="flex" />,
              <IconButton
                icon={
                          Object {
                                    "size": "medium",
                                    "svg": Object {
                                      "content": <div
                                        dangerouslySetInnerHTML={
                                                      Object {
                                                                    "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z\"/></svg>",
                                                                  }
                                        } />,
                                    },
                                  }
                } />,
            ],
          },
        },
      ]
    }
    tone="light" />
</div>
`;

exports[`test Depth 0, tight text 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "170px",
    }
  }>
  <Shadow
    animated={true}
    z={0} />
  <div
    className="pe-card__content">
    <div
      className="pe-card__text pe-card__text--tight ">
      Flat
    </div>
  </div>
</div>
`;

exports[`test Depth 2, tight text 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "170px",
    }
  }>
  <Shadow
    animated={true}
    z={2} />
  <div
    className="pe-card__content">
    <div
      className="pe-card__text pe-card__text--tight ">
      Raised
    </div>
  </div>
</div>
`;

exports[`test Depth normal, tight text 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "170px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <div
      className="pe-card__text pe-card__text--tight ">
      Normal
    </div>
  </div>
</div>
`;

exports[`test Header with icon 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <ListTile
      className="pe-card__header "
      dispatcher={[Function]}
      front={
        <Icon
          avatar={true}
          size="large"
          src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png" />
      }
      icon={
        Object {
          "avatar": true,
          "size": "large",
          "src": "http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png",
        }
      }
      subtitle="Subhead"
      title="Title" />
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/grey.jpg" />
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Header with icon, media, actions (JSX) 1`] = `
<Card
  content={
    Array [
      Object {
        "header": Object {
          "icon": Object {
            "avatar": true,
            "size": "large",
            "src": "http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png",
          },
          "subtitle": "Subhead",
          "title": "Title",
        },
      },
      Object {
        "media": Object {
          "content": <img
            src="http://arthurclemens.github.io/assets/polythene/examples/3.jpg" />,
        },
      },
      Object {
        "actions": Object {
          "content": <div>
            <Button
                    label="Action 1" />
            <Button
                    label="Action 2" />
    </div>,
        },
      },
    ]
  } />
`;

exports[`test No options 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content" />
</div>
`;

exports[`test Option: class 1`] = `
<div
  className="pe-card   class-x">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content" />
</div>
`;

exports[`test Option: className 1`] = `
<div
  className="pe-card   className-x">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content" />
</div>
`;

exports[`test Option: element 1`] = `
<a
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content" />
</a>
`;

exports[`test Option: id 1`] = `
<div
  className="pe-card   "
  id="id-x">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content" />
</div>
`;

exports[`test Option: primary className 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      className="className-primary"
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Option: tabindex 1`] = `
<div
  className="pe-card   "
  tabIndex={3}>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content" />
</div>
`;

exports[`test Overlay with sheet (default dark tone) 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />
      }
      dispatcher={[Function]}
      overlay={
        Object {
          "content": Array [
            Object {
              "primary": Object {
                "key": "title",
                "subtitle": "Subtitle",
                "title": "Primary title",
              },
            },
            Object {
              "actions": Object {
                "content": Array [
                  <Button
                    label="Action 1" />,
                  <Button
                    label="Action 2" />,
                ],
              },
            },
          ],
          "sheet": true,
        }
      }
      ratio="square" />
  </div>
</div>
`;

exports[`test Overlay with sheet (light tone) 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />
      }
      dispatcher={[Function]}
      overlay={
        Object {
          "content": Array [
            Object {
              "primary": Object {
                "key": "title",
                "subtitle": "Subtitle",
                "title": "Primary title",
              },
            },
            Object {
              "actions": Object {
                "content": Array [
                  <Button
                    label="Action 1" />,
                  <Button
                    label="Action 2" />,
                ],
              },
            },
          ],
          "sheet": true,
          "tone": "light",
        }
      }
      ratio="square" />
  </div>
</div>
`;

exports[`test Overlay without sheet 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />
      }
      dispatcher={[Function]}
      overlay={
        Object {
          "className": "pe-dark-tone",
          "content": Array [
            Object {
              "primary": Object {
                "title": "Title",
              },
            },
          ],
        }
      }
      ratio="square" />
    <CardActions
      content={
        Array [
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]}
      layout="justified"
      tight={true} />
  </div>
</div>
`;

exports[`test Primary text with action row and text 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/grey.jpg" />
      }
      dispatcher={[Function]} />
    <CardPrimary
      dispatcher={[Function]}
      subtitle="Subtitle"
      title="Primary title" />
    <CardActions
      content={
        Array [
          <Button
            label="Action 1" />,
          <Button
            label="Action 2" />,
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "size": "medium",
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z\"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
    <div
      className="pe-card__text  ">
      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.
    </div>
  </div>
</div>
`;

exports[`test Primary text with supporting text 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/grey.jpg" />
      }
      dispatcher={[Function]} />
    <CardPrimary
      dispatcher={[Function]}
      subtitle="Subtitle quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat"
      title="Primary title" />
  </div>
</div>
`;

exports[`test Primary with title and subtitle 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      dispatcher={[Function]}
      subtitle="Subtitle"
      title="Primary title" />
  </div>
</div>
`;

exports[`test Separate elements - actions 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "400px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardActions
      content={
        Array [
          <Button
            label="Action 1" />,
          <Button
            label="Action 2" />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Separate elements - header with avatar 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "400px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <ListTile
      className="pe-card__header "
      dispatcher={[Function]}
      front={
        <Icon
          avatar={true}
          size="large"
          src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png" />
      }
      icon={
        Object {
          "avatar": true,
          "size": "large",
          "src": "http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png",
        }
      }
      subtitle="Subhead"
      title="Title" />
  </div>
</div>
`;

exports[`test Separate elements - icon button actions 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "400px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardActions
      content={
        Array [
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
          <IconButton
            icon={
                Object {
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Separate elements - media 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "400px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/3.jpg" />
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Separate elements - normal primary title 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "400px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      dispatcher={[Function]}
      subtitle="Normal - (visual) 24px bottom padding"
      title="Primary title" />
  </div>
</div>
`;

exports[`test Separate elements - text 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "400px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <div
      className="pe-card__text  ">
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<strong>Normal - (visual) 24px bottom padding</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.",
          }
        } />
    </div>
  </div>
</div>
`;

exports[`test Separate elements - tight primary title 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "400px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      dispatcher={[Function]}
      subtitle="Normal - (visual) 16px bottom padding"
      tight={true}
      title="Primary title" />
  </div>
</div>
`;

exports[`test Separate elements - tight text 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "400px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <div
      className="pe-card__text pe-card__text--tight ">
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<strong>Tight - (visual) 16px bottom padding</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.",
          }
        } />
    </div>
  </div>
</div>
`;

exports[`test Separate elements - vertical actions 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "400px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardActions
      content={
        <List
          borders={true}>
          <ListTile
            hoverable={true}>
            Action 1
          </ListTile>
          <ListTile
            hoverable={true}>
            Action 2
          </ListTile>
          <ListTile
            hoverable={true}>
            Action 3
          </ListTile>
        </List>
      }
      dispatcher={[Function]}
      layout="vertical"
      tight={true} />
  </div>
</div>
`;

exports[`test Texts -- dark theme class 1`] = `
<div
  className="pe-card   ">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <ListTile
      className="pe-card__header "
      dispatcher={[Function]}
      front={
        <Icon
          avatar={true}
          size="large"
          src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png" />
      }
      icon={
        Object {
          "avatar": true,
          "size": "large",
          "src": "http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png",
        }
      }
      subtitle="Subhead"
      title="Title" />
    <CardMedia
      content={
        <img
          src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />
      }
      dispatcher={[Function]} />
    <CardPrimary
      dispatcher={[Function]}
      subtitle="Subtitle quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat"
      title="Primary title quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat" />
    <div
      className="pe-card__text  ">
      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.
    </div>
    <CardActions
      bordered={true}
      content={
        Array [
          <Button
            label="Action 1" />,
          <Button
            label="Action 2" />,
          <div
            className="flex" />,
          <IconButton
            icon={
                Object {
                    "size": "medium",
                    "svg": Object {
                      "content": <div
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z\"/></svg>",
                                      }
                        } />,
                    },
                  }
            } />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Themed (color) 1`] = `
<div
  className="pe-card   tests-card-colored-card">
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      dispatcher={[Function]}
      subtitle="Subtitle"
      title="Primary title" />
  </div>
</div>
`;

exports[`test Title image, medium 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "400px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      dispatcher={[Function]}
      media={
        Object {
          "content": <img
            src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />,
          "ratio": "square",
          "size": "medium",
        }
      }
      subtitle="Subtitle"
      title="Title image medium" />
    <CardActions
      content={
        Array [
          <Button
            label="Action 1" />,
          <Button
            label="Action 2" />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Title image, regular 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "400px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      dispatcher={[Function]}
      media={
        Object {
          "content": <img
            src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />,
          "ratio": "square",
          "size": "regular",
        }
      }
      subtitle="Subtitle"
      title="Title image regular" />
    <CardActions
      content={
        Array [
          <Button
            label="Action 1" />,
          <Button
            label="Action 2" />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Title image, size large, landscape 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "360px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      content={
        Array [
          Object {
            "media": Object {
              "content": <img
                src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />,
              "ratio": "landscape",
              "size": "large",
            },
          },
          <div
            className="flex" />,
          Object {
            "actions": Object {
              "content": Array [
                <IconButton
                  icon={
                            Object {
                                      "svg": Object {
                                        "content": <div
                                          dangerouslySetInnerHTML={
                                                        Object {
                                                                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                                                    }
                                          } />,
                                      },
                                    }
                  } />,
                <IconButton
                  icon={
                            Object {
                                      "svg": Object {
                                        "content": <div
                                          dangerouslySetInnerHTML={
                                                        Object {
                                                                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                                                    }
                                          } />,
                                      },
                                    }
                  } />,
                <IconButton
                  icon={
                            Object {
                                      "svg": Object {
                                        "content": <div
                                          dangerouslySetInnerHTML={
                                                        Object {
                                                                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                                                    }
                                          } />,
                                      },
                                    }
                  } />,
              ],
              "layout": "vertical",
            },
          },
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Title image, size large, square 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "360px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      content={
        Array [
          Object {
            "media": Object {
              "content": <img
                src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />,
              "ratio": "square",
              "size": "large",
            },
          },
          <div
            className="flex" />,
          Object {
            "actions": Object {
              "content": Array [
                <IconButton
                  icon={
                            Object {
                                      "svg": Object {
                                        "content": <div
                                          dangerouslySetInnerHTML={
                                                        Object {
                                                                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,21.3497L 10.5504,20.0327C 5.4014,15.3607 1.99939,12.2736 1.99939,8.49762C 1.99939,5.41364 4.41537,2.99762 7.49939,2.99762C 9.24039,2.99762 10.9084,3.80566 11.9994,5.08362C 13.0904,3.80566 14.7584,2.99762 16.4994,2.99762C 19.5834,2.99762 21.9994,5.41364 21.9994,8.49762C 21.9994,12.2736 18.5974,15.3607 13.4484,20.0327L 11.9994,21.3497 Z \"/></svg>",
                                                                    }
                                          } />,
                                      },
                                    }
                  } />,
                <IconButton
                  icon={
                            Object {
                                      "svg": Object {
                                        "content": <div
                                          dangerouslySetInnerHTML={
                                                        Object {
                                                                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#050708\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 16.9994,2.99805L 6.9994,2.99805C 5.8954,2.99805 5.0104,3.89404 5.0104,4.99805L 4.9994,20.998L 11.9994,17.998L 18.9994,20.998L 18.9994,4.99805C 18.9994,3.89404 18.1044,2.99805 16.9994,2.99805 Z \"/></svg>",
                                                                    }
                                          } />,
                                      },
                                    }
                  } />,
                <IconButton
                  icon={
                            Object {
                                      "svg": Object {
                                        "content": <div
                                          dangerouslySetInnerHTML={
                                                        Object {
                                                                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 20.9994,10.9981L 13.9994,3.99807L 13.9994,7.99807C 6.9994,8.99807 3.9994,13.9981 2.9994,18.9981C 5.4994,15.4981 8.9994,13.8981 13.9994,13.8981L 13.9994,17.9981L 20.9994,10.9981 Z \"/></svg>",
                                                                    }
                                          } />,
                                      },
                                    }
                  } />,
              ],
              "layout": "vertical",
            },
          },
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;

exports[`test Title image, small 1`] = `
<div
  className="pe-card   "
  style={
    Object {
      "maxWidth": "400px",
    }
  }>
  <Shadow
    animated={true}
    z={1} />
  <div
    className="pe-card__content">
    <CardPrimary
      dispatcher={[Function]}
      media={
        Object {
          "content": <img
            src="http://arthurclemens.github.io/assets/polythene/examples/1.jpg" />,
          "ratio": "square",
          "size": "small",
        }
      }
      subtitle="Subtitle"
      title="Title image small" />
    <CardActions
      content={
        Array [
          <Button
            label="Action 1" />,
          <Button
            label="Action 2" />,
        ]
      }
      dispatcher={[Function]} />
  </div>
</div>
`;
